--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,47 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
     id 'java'
+    id 'application'
 }
 
-group 'com.bob.jr'
-version '1.0-SNAPSHOT'
+project.setVersion("0.0.2")
 
-repositories {
+repositories {   // repositories for Jar's you access in your code
+    jcenter()
     mavenCentral()
     maven {
         url 'https://m2.dv8tion.net/releases'
     }
 }
 
+application {
+    mainClass = 'com.bob.jr.BobJr'
+}
+
+tasks.create('dockerBuild').dependsOn(shadowJar).doLast({
+    exec {
+        executable 'docker'
+        args 'build', '--build-arg', 'PROJECT_VERSION='+project.getVersion(), '-t', 'taclayt2/bob-jr-lava:' + project.getVersion() , '.'
+    }
+})
+
+tasks.create('dockerPublish').dependsOn(dockerBuild).doLast({
+    exec {
+        executable 'docker'
+        args 'image', 'push', 'taclayt2/bob-jr-lava:' + project.getVersion()
+    }
+})
+
 dependencies {
+    implementation platform('com.google.cloud:libraries-bom:20.9.0')
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     implementation group: 'com.discord4j', name: 'discord4j-core', version: '3.1.5'
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.76'
     implementation group: 'com.google.cloud', name: 'google-cloud-texttospeech', version: '1.4.1'
 
+    implementation 'com.google.cloud:google-cloud-secretmanager'
 
+// Add your dependencies here.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
