--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,6 +13,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: 
+      name: Configure GitHub Action Build
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
