fixing the gradle task

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,4 +34,4 @@ jobs:
         
       # Pushes docker image
       - name: Docker push
-        run: ./gradlew dockerPush --no-daemon
+        run: ./gradlew dockerPublish --no-daemon
