updating env to take secret

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,4 +34,6 @@ jobs:
         
       # Pushes docker image
       - name: Docker push
+        env: 
+          DATA_DOG_API_KEY: ${{ secrets.DATA_DOG_API_KEY }}
         run: ./gradlew dockerPublish --no-daemon
