--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation group: 'com.discord4j', name: 'discord4j-core', version: '3.1.5'
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.76'
     implementation group: 'com.google.cloud', name: 'google-cloud-texttospeech', version: '1.4.1'
+    implementation 'com.google.cloud:google-cloud-logging-logback:0.123.4-alpha'
 
     implementation 'com.google.cloud:google-cloud-secretmanager'
 
