--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
+shadowJar {
+    mergeServiceFiles()
+}
+
 test {
     useJUnitPlatform()
 }
