--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'application'
 }
 
-project.setVersion("0.0.3")
+project.setVersion("0.0.4")
 
 repositories {   // repositories for Jar's you access in your code
     jcenter()
@@ -21,7 +21,9 @@ application {
 tasks.create('dockerBuild').dependsOn(shadowJar).doLast({
     exec {
         executable 'docker'
-        args 'build', '--build-arg', 'PROJECT_VERSION=' + project.getVersion(), '-t', 'taclayt2/bob-jr-lava:' + project.getVersion(), '.'
+        args 'build', '--build-arg', 'PROJECT_VERSION=' + project.getVersion(),
+                '--build-arg', 'DATA_DOG_API_KEY=' + System.getenv('DATA_DOG_API_KEY'),
+                '-t', 'taclayt2/bob-jr-lava:' + project.getVersion(), '.'
     }
 })
 
@@ -36,15 +38,22 @@ dependencies {
     implementation platform('com.google.cloud:libraries-bom:20.9.0')
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    implementation group: 'com.discord4j', name: 'discord4j-core', version: '3.1.5'
+    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.32'
+    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '6.6'
+    implementation group: 'com.discord4j', name: 'discord4j-core', version: '3.2.2'
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.76'
     implementation group: 'com.google.cloud', name: 'google-cloud-texttospeech', version: '1.4.1'
+    implementation 'com.google.cloud:google-cloud-logging-logback:0.123.4-alpha'
 
     implementation 'com.google.cloud:google-cloud-secretmanager'
 
 // Add your dependencies here.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+}
+
+shadowJar {
+    mergeServiceFiles()
 }
 
 test {
