fix loading local file from docker container

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
 shadowJar {
     mergeServiceFiles()
+
+    // add sound files via the Dockerfile process
+    exclude "/soundFiles/*"
 }
 
 test {
