--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,9 @@ dependencies {
     implementation 'com.google.cloud:google-cloud-secretmanager'
 
 // Add your dependencies here.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.mockito:mockito-core:4.1.0'
 }
 
 shadowJar {
