refactoring application after merge

--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -8,6 +8,9 @@ repositories {   // repositories for Jar's you access in your code
     maven {
         url 'https://m2.dv8tion.net/releases'
     }
+    maven {
+        url 'https://jitpack.io'
+    }
 }
 
 application {
