--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.32'
     implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '6.6'
     implementation group: 'com.discord4j', name: 'discord4j-core', version: '3.2.6'
-    implementation group: 'dev.arbjerg', name: 'lavaplayer', version: '0eaeee195f0315b2617587aa3537fa202df07ddc-SNAPSHOT'
+    implementation group: 'dev.arbjerg', name: 'lavaplayer', version: '2.1.2'
     implementation group: 'com.github.aikaterna', name: 'lavaplayer-natives', version: 'original-SNAPSHOT'
     implementation group: 'com.google.cloud', name: 'google-cloud-texttospeech', version: '1.4.1'
     implementation 'com.google.cloud:google-cloud-logging-logback:0.123.4-alpha'
